# primary_wire

./: .gitignore  README.txt  pyproject.toml  requirements.txt  tasks.py
attempt1/: requirements.txt
attempt1/docs/: cron.txt
attempt1/sources/: sources.yaml
attempt1/src/: fetch.py  parser.py
attempt1_not_working_deleteafter/tests/src/: test_dedup.py  test_parser.py
config/: scraper_config.yaml
data/2026/: 2026-01-02.csv  2026-01-05.csv  2026-01-06.csv  2026-01-07.csv  2026-01-08.csv  2026-01-11.csv  2026-01-12.csv  2026-01-13.csv  2026-01-14.csv  2026-01-15.csv  2026-01-16.csv  2026-01-19.csv  2026-01-20.csv  2026-01-21.csv  2026-01-22.csv  2026-01-26.csv  2026-01-27.csv  2026-01-28.csv  2026-01-29.csv  2026-01-30.csv  2026-02-02.csv  2026-02-03.csv  2026-02-04.csv  2026-02-05.csv  2026-02-06.csv  2026-02-09.csv  2026-02-10.csv  2026-02-11.csv  2026-02-12.csv  2026-02-13.csv  2026-02-16.csv  2026-02-17.csv  2026-02-18.csv  2026-02-19.csv  2026-02-20.csv  2026-02-23.csv  2026-02-24.csv  2026-02-25.csv  2026-02-26.csv  2026-02-27.csv  (+99 more)
docs/: contributing.txt  reporting.txt  setup.txt  sources.txt  tasks.txt
reports/latest/: ir_platform.csv  ir_platform.txt  missing_tickers.txt  press_release_counts.csv  scraper_coverage.txt  scraper_coverage_missing.csv  scraper_coverage_summary.txt
sources/: sources.yaml
src/: check_scraper_coverage.py  csv_utils.py  ddg_search.py  dedup.py  detect_ir_platform.py  get_source.py  missing_tickers.py  print_csv_table.py  scrape_all.py  scrape_cdw.py  scrape_company_template.py  scrape_costco.py  scrape_investorroom.py  scrape_notified.py  scrape_notified_gated.py  scrape_q4_ir.py  scrape_tjx.py  scrape_utils.py  sources_utils.py  update_release.py  update_source.py  whatsapp_digest.py
src/delete_after/: update_release.py
src/playground/: commands_to_test.txt  commands_used.txt  scrape_costco.py  scrape_investorroom.py_asof_20260626_202102  scrape_investorroom.py_asof_20260626_203120  scrape_investorroom.py_asof_20260627_193913  scrape_notified.py_asof_20260628_134308  scrape_notified.py_asof_20260628_185639  scrape_tjx.py  scrape_tjx_urls.py  scratch_notes.txt  tjx_yearly_url.py
src/playground/claude_sessions/: 2026-06-26_bypass_cloudflare_blocking.txt  2026-06-26_review.txt  2026-06-28_bypass_cloudflare_blocking.txt  2026-06-29_review.txt  2026-07-04_review.txt  2026-07-06_review.txt  2026-07-07_code_improvements.txt  2026-07-11_review.txt  2026-07-17_review.txt  2026-07-20_data_utility_assessment.txt  2026-07-20_review.txt  readme.txt
src/playground/openai_sessions/: 2026-06-27.txt  2026-07-04_review.txt  2026-07-07_review.txt
src/prototypes/: fetch_aspx_page_v1.py  fetch_aspx_page_v2.py
src/reporting/: __init__.py  check_press_release_counts.py  check_scraper_coverage.py  detect_ir_platform.py  missing_tickers.py  press_release_counts.py
src/scripts/one_offs/: add_publish_time_column.py  migrate_rename_publish_datetime.py
src/utils/: csv_utils.py  q4_link_pattern.py  scrape_notified_utils.py  scrape_utils.py  sources_utils.py
tests/: test_check_press_release_counts.py  test_regression_release_counts.py  test_regression_release_counts_dry.py  test_regression_release_counts_wet.py  test_scrape_all.py  test_scrape_investorroom.py  test_scrape_notified.py  test_scrape_notified_gated.py  test_scrape_q4_ir.py  test_scrape_utils.py  test_sources_utils.py
